--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "blog",
   "version": "1.0.0",
-  "description": "",
+  "description": "前端进阶之路博客",
   "main": "index.js",
   "scripts": {
     "dev": "vuepress dev docs",
     "build": "vuepress build docs",
     "deploy": "bash deploy.sh"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["前端"],
+  "author": "huangruitian",
   "license": "ISC"
 }
